[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/ui/ResourceIndicator.tscn" type="PackedScene" id=1]
[ext_resource path="res://images/icons/bread.png" type="Texture" id=2]
[ext_resource path="res://images/icons/house.png" type="Texture" id=3]
[ext_resource path="res://images/icons/monument.png" type="Texture" id=4]
[ext_resource path="res://src/ui/TopBar.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.498039, 0.498039, 0.498039, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.172549, 0.172549, 0.172549, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="TopBar" type="PanelContainer"]
anchor_right = 1.0
margin_bottom = 38.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 1022.0
margin_bottom = 37.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="IndicatorsContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1018.0
margin_bottom = 33.0

[node name="Breadforce" parent="MarginContainer/IndicatorsContainer" instance=ExtResource( 1 )]
margin_left = 0.0
margin_right = 57.0
margin_bottom = 31.0
icon = ExtResource( 2 )
text = "123"

[node name="HouseCapacity" parent="MarginContainer/IndicatorsContainer" instance=ExtResource( 1 )]
margin_left = 61.0
margin_right = 105.0
margin_bottom = 31.0
icon = ExtResource( 3 )
text = "2"

[node name="MonumentLevel" parent="MarginContainer/IndicatorsContainer" instance=ExtResource( 1 )]
margin_left = 109.0
margin_right = 153.0
margin_bottom = 31.0
icon = ExtResource( 4 )
text = "1"
